--- a/src/play/index.scss
+++ b/src/play/index.scss
@@ -53,13 +53,39 @@ canvas{
     margin: 0;
 }
 
-#infoDiv{
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	height: 100%;
-	background: white;
-	width: calc(100%/3);
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+#infoPanel {
+    position: relative;
+    background-color: black;
+    bottom: 0;
+    height: calc(100%/3);
+}
+
+#infoPanelOverlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index:9999;
+    opacity: 0.1;
+    background-color: white;
+}
+
+
+#infoDiv {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    background: white;
+    width: calc(100%/3);
+}
+
+#infoPages {
+    top: 0;
+    height: calc(200%/3);
 }
 
 #tabs{
@@ -78,4 +104,148 @@ canvas{
 
 .codeActivity {
     background:rgba(100,200,100,0.5);
+}
+
+button {
+    border: 1px solid #999999;
+    background-color: slategrey
+}
+
+button:disabled,
+button[disabled] {
+    opacity: 0.5;
+}
+.crt {
+    overflow: hidden;
+    &:before {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+        z-index: 2;
+        background-size: 100% 3%, 100% 100%;
+        pointer-events: none;
+    }
+
+    &:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: inherit;
+        height: inherit;
+        background: rgba(18, 16, 16, 0.1);
+        opacity: 0;
+        z-index: 2;
+        pointer-events: none;
+        animation: flicker 0.15s infinite;
+    }
+}
+
+.bar {
+    background-color: black;
+    opacity: 0.5;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    top: -100%;
+    animation: crt-bar 5s linear infinite;
+}
+
+@keyframes crt-bar {
+    to {
+        top: 100%;
+    }
+}
+
+@keyframes flicker {
+    0% {
+        opacity: 0.27861;
+    }
+
+    5% {
+        opacity: 0.34769;
+    }
+
+    10% {
+        opacity: 0.23604;
+    }
+
+    15% {
+        opacity: 0.90626;
+    }
+
+    20% {
+        opacity: 0.18128;
+    }
+
+    25% {
+        opacity: 0.83891;
+    }
+
+    30% {
+        opacity: 0.65583;
+    }
+
+    35% {
+        opacity: 0.67807;
+    }
+
+    40% {
+        opacity: 0.26559;
+    }
+
+    45% {
+        opacity: 0.84693;
+    }
+
+    50% {
+        opacity: 0.96019;
+    }
+
+    55% {
+        opacity: 0.08594;
+    }
+
+    60% {
+        opacity: 0.20313;
+    }
+
+    65% {
+        opacity: 0.71988;
+    }
+
+    70% {
+        opacity: 0.53455;
+    }
+
+    75% {
+        opacity: 0.37288;
+    }
+
+    80% {
+        opacity: 0.71428;
+    }
+
+    85% {
+        opacity: 0.70419;
+    }
+
+    90% {
+        opacity: 0.7003;
+    }
+
+    95% {
+        opacity: 0.36108;
+    }
+
+    100% {
+        opacity: 0.24387;
+    }
 }
