--- a/src/play/index.scss
+++ b/src/play/index.scss
@@ -39,14 +39,6 @@
     }
 }
 
-#infoPanelCanvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
 #editorPanel{
 	position: absolute;
 	left: 0;
@@ -65,6 +57,19 @@
     background: #1F1F1F;
 }
 
+#infoPanelTaskList {
+    position: relative;
+    left: 5px;
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+
+    li {
+        color: white;
+        font-family: 'Lucida Console', 'monospace', 'Courier New';
+    }
+}
+
 #testSelect input[type=number]::-webkit-inner-spin-button,
 #testSelect input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
@@ -80,6 +85,7 @@ input[type=number] {
     background-color: black;
     bottom: 0;
     height: calc(100%/3);
+    overflow: hidden;
 }
 
 #infoPanelOverlay {
